--- a/backend/package.json
+++ b/backend/package.json
@@ -43,7 +43,7 @@
     "langchain": "^0.3.27",
     "multer": "^1.4.5-lts.1",
     "openai": "^5.1.1",
-    "opencv.js": "^1.2.1",
+    "@techstark/opencv-js": "^4.11.0-release.1",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "tesseract.js": "^6.0.1"
