--- a/backend/package.json
+++ b/backend/package.json
@@ -24,11 +24,9 @@
     "reset": "npx prisma migrate reset",
     "seed": "ts-node prisma/seed.ts"
   },
-
   "prisma": {
-  "seed": "ts-node prisma/seed.ts"
-},
-
+    "seed": "ts-node prisma/seed.ts"
+  },
   "dependencies": {
     "@nestjs/common": "^11.0.1",
     "@nestjs/core": "^11.0.1",
@@ -41,8 +39,14 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "cors": "^2.8.5",
+    "fuse.js": "^7.1.0",
+    "langchain": "^0.3.27",
+    "multer": "^1.4.5-lts.1",
+    "openai": "^5.1.1",
+    "@techstark/opencv-js": "^4.11.0-release.1",
     "reflect-metadata": "^0.2.2",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "tesseract.js": "^6.0.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
