--- a/backend/package.json
+++ b/backend/package.json
@@ -24,12 +24,11 @@
     "reset": "npx prisma migrate reset",
     "seed": "ts-node prisma/seed.ts"
   },
-  
   "prisma": {
     "seed": "ts-node prisma/seed.ts"
   },
-  
   "dependencies": {
+    "@langchain/openai": "^0.5.12",
     "@nestjs/common": "^11.0.1",
     "@nestjs/core": "^11.0.1",
     "@nestjs/mapped-types": "^2.1.0",
@@ -41,16 +40,15 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "cors": "^2.8.5",
-    "fuse.js": "^7.1.0",
+    "fuse.js": "^6.6.2",
     "langchain": "^0.3.27",
     "multer": "^1.4.5-lts.1",
     "openai": "^5.1.1",
-    "@techstark/opencv-js": "^4.11.0-release.1",
+    "opencv.js": "^1.2.1",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "tesseract.js": "^6.0.1"
   },
-  
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
     "@eslint/js": "^9.18.0",
@@ -59,8 +57,9 @@
     "@nestjs/testing": "^11.0.1",
     "@swc/cli": "^0.6.0",
     "@swc/core": "^1.10.7",
-    "@types/express": "^5.0.0",
+    "@types/express": "^5.0.3",
     "@types/jest": "^29.5.14",
+    "@types/multer": "^1.4.13",
     "@types/node": "^22.10.7",
     "@types/supertest": "^6.0.2",
     "eslint": "^9.18.0",
@@ -79,7 +78,6 @@
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.20.0"
   },
-  
   "jest": {
     "moduleFileExtensions": [
       "js",
