--- a/backend/package.json
+++ b/backend/package.json
@@ -36,6 +36,8 @@
     "@prisma/client": "^5.22.0",
     "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.19",
+    "@nestjs/config": "^3.2.2",
+    "axios": "^1.6.8",
     "bcrypt": "^6.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
@@ -43,7 +45,7 @@
     "fuse.js": "^6.6.2",
     "langchain": "^0.3.27",
     "multer": "^1.4.5-lts.1",
-    "openai": "^5.1.1",
+    "openai": "^1.14.3",
     "opencv.js": "^1.2.1",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
